ncc/testsuite/positive/two-ctors.n
using Nemerle.IO;

class C {
  static this () {
    printf ("static ctor\n");
  }

  public this () {
    printf ("object ctor\n");
  }
}

class A {
  static this () {}
}


module M {
  public Main () : void {
    def _ = C ();
    _ = A ();
  }
}
/*
BEGIN-OUTPUT
static ctor
object ctor
END-OUTPUT
*/
