ncc/testsuite/negative/bug85.n
public class C1 { public static P(_:string) : void {()} }

public class C2 {
  public this () {()}

  public p (s:string) : void = extern "C1.P"; // E: only static methods are allowed to be extern

  public static Main () : void {
    C2 ().p ("ala ma kota")
  }
}
